# alcatrazer

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alcatrazer.toml  docker-compose.yml  initialize_alcatraz.sh  initialize_sandbox.sh  mise.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml  smoke.yml
container/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: design_principles.md  install_method.md
docs/features/: alcatraz_how_and_what_for.md  as_little_bash_as_necessary.md  auto-promotion-daemon.md  install_method.md  no_sign_they_work_in_alcatraz.md  prepare_ci.md  start_from_existing_repo.md
images/: banner.txt
scripts/: promote.sh
src/: identity.py  initialize_alcatraz.sh  inspect_promotion.py  promote.py  promote.sh  resolve_python.sh  snapshot.py  watch_alcatraz.py  watch_alcatraz.sh
src/alcatrazer/: __init__.py  cli.py  daemon.py  identity.py  init.py  inspect.py  promote.py  snapshot.py
src/alcatrazer/container/: Dockerfile  docker-compose.yml
src/alcatrazer/integration_tests/: test_smoke.py
src/alcatrazer/scripts/: initialize_alcatraz.sh  resolve_python.sh
src/alcatrazer/templates/: alcatrazer.toml
src/alcatrazer/tests/: test_identity.py  test_initialize.py  test_promote.py  test_python_resolution.py  test_smoke.py  test_snapshot.py  test_watch_alcatraz.py
test/: seed_alcatraz.sh  seed_sandbox.sh  smoke_test.sh  test_daemon_startup.sh  test_promote.sh  test_python_resolution.sh
tests/: seed_alcatraz.sh  smoke_test.sh  test_daemon_startup.sh  test_identity.py  test_initialize.py  test_promote.py  test_promote.sh  test_python_resolution.py  test_python_resolution.sh  test_snapshot.py  test_watch_alcatraz.py
